# ros2_ws

./: .gitignore
src/cone_info_publisher_pkg/: package.xml  setup.cfg  setup.py
src/cone_info_publisher_pkg/cone_info_publisher_pkg/: cone_info_node.py
src/debug_pkg/: setup.py
src/debug_pkg/debug_pkg/: yolov8_visualizer_node.py
src/debug_pkg/launch/: multi_camera_yolov8_debug.launch.py
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: ConeInfo.msg  ConeInfoArray.msg
src/launch_pkg/: package.xml
src/launch_pkg/launch/: main.launch.py
src/nevigaotr/: cone_map_builder.cpp  cone_nav.launch.py  waypoint_path_node.cpp
src/perception_yolov8_pkg/: package.xml  setup.cfg  setup.py
src/perception_yolov8_pkg/launch/: multi_camera_yolov8.launch.py
src/perception_yolov8_pkg/perception_yolov8_pkg/: cam_publisher_node.py  yolov8_node.py
src/sensor_fusion_pkg/: package.xml  setup.cfg  setup.py
src/sensor_fusion_pkg/launch/: fusion_multi.launch.py
src/sensor_fusion_pkg/sensor_fusion_pkg/: bbox_projector_node.py
src/sensor_initialize/: CMakeLists.txt  package.xml
src/sensor_initialize/config/: lidar_to_cam1_front_up_tf.yaml  lidar_to_cam2_front_down_tf.yaml  lidar_to_cam3_left_tf.yaml  lidar_to_cam4_right_tf.yaml
src/sensor_initialize/launch/: sensor_tf.launch.py
src/sensor_initialize/src/: cluster_node.cpp  dbscan.h  lidar_preprocessing_node.cpp  lidar_to_camera_broadcaster.cpp
src/usb_cam/config/: camera_info_1_front_up.yaml  camera_info_2_front_down.yaml  camera_info_3_left.yaml  camera_info_4_right.yaml  params_1_front_up.yaml  params_2_front_down.yaml  params_3_left.yaml  params_4_right.yaml
src/usb_cam/launch/: multiple_camera.launch.py
