<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_fusion_pkg</name>
  <version>0.0.1</version>
  <description>Fuse YOLOv8 DetectionArray with LiDAR PointCloud2 via TF2 and publish fused markers.</description>

  <maintainer email="ky942400@gmail.com">moonshot</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>interfaces_pkg</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Test / lint dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
